<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSExample</string>
<<<<<<< HEAD
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <!-- <string name="action_settings">Settings</string> -->
    <string name="title_activity_device_speed_demo">DeviceSpeedDemoActivity</string>
    <string name="info">Waiting for GPS signal...</string>
    <string name="about_menu_name">About</string>
    <string name="about_message">Sample application to demonstrate GPS device speed in Android !! </string>
=======
    <string name="menu_settings">Settings</string>
    <!-- <string name="action_settings">Settings</string> -->
    <string name="info">Waiting for GPS signal...</string>
>>>>>>> e8801f4f146c9f4cc5cf9f5dcfe525e3f217fbcb
    <string name="unit_km">Kilometer</string>
    <string name="unit_miles">Miles</string>
    <string name="setting_unit">Measurement Unit</string>
    <string name="title_activity_speedometer_analog">SpeedometerAnalog</string>
    <string name="action_settings">Settings</string>
<<<<<<< HEAD
    

    <string name="Distanc">"Distance: "</string>
    <string name="Time">"Time: "</string>
    <string name="Speed">"Speed: "</string>
    <string name="DistanceRes">0 m</string>
    <string name="timeRes">0 Hour(s) 0 Minutes(s) 0 Second(s)</string>
    <string name="SpeedRes">0 km/h</string>
=======
    <string name="Distanc">Distance: </string>
    <string name="Time">Time: </string>
    <string name="Speed">Speed: </string>
    <string name="DistanceRes">0 m</string>
    <string name="timeRes">0 Hour(s) 0 Minute(s) 0 Second(s)</string>
    <string name="SpeedRes">0 Km/h</string>
>>>>>>> e8801f4f146c9f4cc5cf9f5dcfe525e3f217fbcb
    <string name="BtnText">Start</string>
    <string name="Off">OFF</string>
    <string name="Auto">Auto</string>
    <string name="On">ON</string>
    <string name="strBtnrecord">Record Track</string>
<<<<<<< HEAD
    <string name="BikeDesc">Bike Picture ...</string>

</resources>
=======
    <string name="BikeDesc">Bike Picture</string>

</resources>
>>>>>>> e8801f4f146c9f4cc5cf9f5dcfe525e3f217fbcb
