<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:divider="?android:attr/listDivider"
    android:orientation="vertical"
    android:background="@drawable/bcg3"
    tools:context=".MainActivity"
     >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgBikeSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:contentDescription="@string/BikeDesc"
            android:gravity="center"
            android:src="@drawable/side" />

        <ImageView
            android:id="@+id/imgBikeFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/BikeDesc"
            android:gravity="center"
            android:src="@drawable/front" />
    </LinearLayout>

    <com.example.gpsexample.Drawing
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" />

    <Button
        android:id="@+id/btnRecTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="btnRecTrackonClick"
        android:text="@string/strBtnrecord" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/Auto" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="17dp"
        android:text="@string/Off" />

    <TextView
        android:id="@+id/On"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:text="@string/On" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/BikeDesc"
        android:src="@drawable/torch" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRecTrack"
        android:layout_alignParentLeft="true"
        android:max="2"
        android:progress="0" />

</RelativeLayout>